FIX: logo too big

--- a/public/style.css
+++ b/public/style.css
@@ -62,7 +62,7 @@ footer {
   display: grid;
   /* grid-template-columns: repeat(auto-fill, minmax(50px, 1fr)); */
   grid-gap: 1rem;
-  grid-template-columns: 2fr 9fr 1fr 1fr 1fr;
+  grid-template-columns: 2fr 9fr 1fr 1fr 1fr 1fr;
   background-color: black;
   color: white;
   text-align: center;
@@ -72,13 +72,10 @@ footer {
 #shopAll {
   font-size: 24px;
   font-weight: bold;
-  /* grid-column: 1 / span 2; */
 }
 
 #logo {
   text-align: center;
-  height: 75px;
-  /* grid-column: 1 / span 2; */
 }
 
 .shopping-cart {
@@ -199,6 +196,7 @@ footer {
   display: grid;
   grid-template-columns: 1fr 1fr;
 }
+
 #checkoutSummary {
   display: grid;
   grid-template-columns: 1fr 1fr;
